--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
 
         <h1>Shop</h1>
 
-        <img id="landscape" src="https://images.unsplash.com/photo-1481495278953-0967c9759b78?auto=format&fit=crop&w=1651&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D.jpg" alt="furnace">
+        <img id="landscape" src="img/clothes.jpg" alt="furnace">
         <br/>
 
         <h2><a href="">Mens</a> <br/></h2>
